@@ -13,6 +13,8 @@ Version 2.6
 
 - The 256-color/true-color terminal formatters now support the italic attribute
   in styles (PR#1288)
+- Update Rust lexer to cover more builtins (mostly macros) and miscellaneous
+  new syntax (PR#1320)
 - Support HTTP 2/3 header (PR#1308)
 - Boogie/Silver: support line continuations and triggers, move contract keywords
   to separate category (PR#1299)
